Pushing new changes

--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -136,26 +136,32 @@
       "\n",
       "I have selected a number in my mind between 1 and 100.\n",
       "Can you guess?\n",
-      "What is the first number you guess?13\n",
+      "What is the first number you guess?50\n",
       "FAR\n",
       "What is the new number you guess?\n",
-      "73\n",
+      "25\n",
       "CLOSER\n",
       "What is the new number you guess?\n",
-      "83\n",
-      "CLOSER\n",
-      "What is the new number you guess?\n",
-      "90\n",
-      "CLOSER\n",
-      "What is the new number you guess?\n",
-      "99\n",
+      "20\n",
       "FARTHER\n",
       "What is the new number you guess?\n",
-      "95\n",
+      "30\n",
+      "FARTHER\n",
+      "What is the new number you guess?\n",
+      "28\n",
       "CLOSER\n",
       "What is the new number you guess?\n",
-      "93\n",
-      "BRAVO!!! You have guessed 93 correctly in 7 attempt\n"
+      "27\n",
+      "CLOSER\n",
+      "What is the new number you guess?\n",
+      "26\n",
+      "CLOSER\n",
+      "What is the new number you guess?\n",
+      "24\n",
+      "CLOSER\n",
+      "What is the new number you guess?\n",
+      "23\n",
+      "BRAVO!!! You have guessed 23 correctly in 9 attempt\n"
      ]
     }
    ],
