--- a/11-Python Generators/02-Iterators and Generators Homework.ipynb
+++ b/11-Python Generators/02-Iterators and Generators Homework.ipynb
@@ -19,12 +19,13 @@
    "source": [
     "def gensquares(N):\n",
     "\n",
-    "    pass"
+    "    for i in range(N):\n",
+    "        yield i**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,17 +36,12 @@
       "1\n",
       "4\n",
       "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n"
+      "16\n"
      ]
     }
    ],
    "source": [
-    "for x in gensquares(10):\n",
+    "for x in gensquares(5):\n",
     "    print(x)"
    ]
   },
@@ -60,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "6"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,36 +78,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rand_num(low,high,n):\n",
     "\n",
-    "    pass"
+    "    for i in range (n):\n",
+    "        yield random.randint(low,high)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "1\n",
-      "10\n",
-      "5\n",
-      "8\n",
       "2\n",
       "8\n",
-      "5\n",
       "4\n",
-      "5\n",
+      "4\n",
+      "10\n",
+      "7\n",
+      "10\n",
+      "9\n",
       "1\n",
-      "4\n"
+      "8\n",
+      "10\n",
+      "7\n"
      ]
     }
    ],
@@ -131,13 +128,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    }
+   ],
    "source": [
     "s = 'hello'\n",
     "\n",
-    "#code here"
+    "#code here\n",
+    "#for letter in s:\n",
+    "#    print(letter)\n",
+    "    \n",
+    "s_iter = iter(s)\n",
+    "print(next(s_iter))"
    ]
   },
   {
@@ -206,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
